=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.3
 - Fixed: [ 2888957 ] SVN, DB import fails with samll letter to insert into n_sort (fisharebest)
 - Fixed: [ 2879600 ] Googlemaps ignores privacy rules (wooc)
 - Update: Prototype 1.6.1 and Script.aculo.us 1.8.3 (volschin)
 - Update: Module for PunBB 1.2.22 (volschin)
 - Fixed: [ 2865480 ] 4.2.2 Googlemaps, Place Hierarchy not display in Chrome (wooc)
 - Fixed: [ 2871549 ] Re-named PGV folder requires manual edit of config.php (canajun2eh)
 - Fixed: [ 2869455 ] Unable to delete a research assistant folder (patch by mmoreno)
 - Added: [ 2843471 ] Remove "Remember me..." (fisharebest)
 - Fixed: [ 2857144 ] v4.2.2 sitemap files contain duplicate entries for multi-ged (fisharebest)
 - Fixed: [ 2827267 ] Fix name slashes and spaces of all types of names (fisharebest)
 - Update: Performance of privacy calculations (fisharebest)
 - Fixed: [ 2858324 ] SVN  error 8 on edit family popup (fisharebest)
 - Fixed: [ 2866474 ] Deleting a Task (fisharebest)
 - Fixed: [ 2844024 ] class_gedcomrecord.php 5784 (fisharebest)
 - Fixed: [ 2848954 ] Incorrect page headers (canajun2eh)
 - Fixed: [ 2844011 ] gedrecord.php 4462 minor issue (fisharebest)
 - Update: Updated readme.txt to highlight the necessity for PDO/mysql (windmillway)
 - Added: New statistics (wooc)
 - Fixed: [ 2833809 ] Cannot empty all the clipping cart (canajun2eh)

Version 4.2.2 2009-08-01
 - Fixed: [ 2826529 ] 4.2.2svn5976 - Advanced HTML square brackets error (wooc)
 - Fixed: [ 1625495 ] 4.1 Chinese not shown in Report (imsza)
 - Fixed: [ 1410725 ] 4.0b5: Footnote numbers in reports cause line breaks (imsza)
 - Fixed: [ 1568536 ] Ahnentafel report formatting issues (imsza)
 - Fixed: [ 1539988 ] Family Group Report - PDF Error (imsza)